# tui-g_rule

./: .gitignore  CHANGELOG.md  Cargo.toml  PRESET_EXAMPLES.md  README.md
examples/: hor_gradient_padding.rs  hor_gradient_padding.tape  no_gradient.rs  no_gradient.tape  preset_examples.rs  preset_examples.tape  t.rs  vert_gradient_padding.rs  vert_gradient_padding.tape  x.rs
examples/hor_gradient_margin/: hor_gradient_margin.rs  hor_gradient_margin.tape
examples/hor_gradient_padding/: hor_gradient_padding.rs  hor_gradient_padding.tape
examples/no_gradient/: no_gradient.rs  no_gradient.tape
examples/vert_gradient_margin/: vert_gradient_margin.rs  vert_gradient_margin.tape
examples/vert_gradient_padding/: vert_gradient_padding.rs  vert_gradient_padding.tape
src/: lib.rs  presets.rs
