[package]
name = "tui-g_rule"
version = "0.1.3"
edition = "2024"
authors = ["F-77777"]
license = "MIT"
description = "a pretty rule widget for ratatui"
[dependencies]
colorgrad = "0.7.0"
crossterm = "0.28.1"
ratatui = "0.29.0"

[[example]]
name = "hor_gradient_margin"
path = "examples/hor_gradient_margin/hor_gradient_margin.rs"

[[example]]
name = "vert_gradient_margin"
path = "examples/vert_gradient_margin/vert_gradient_margin.rs"

[[example]]
name = "no_gradient"
path = "examples/no_gradient/no_gradient.rs"
